# RCTGen2

./: Cargo.toml
.github/workflows/: rust.yml
data/masks/: default.json  inverted.json  upright.json
embree/: Cargo.toml
embree/src/: lib.rs
make-track/: Cargo.toml
make-track/src/: chain.rs  curves.rs  lib.rs  main.rs  mask.rs  offset.rs  split.rs  sprites_json.rs  track_curves.rs  track_desc.rs  track_model.rs  track_sections.rs
make-track/tests/: test.rs
make-track/tests/files/output/test-track/: sprites.json
make-track/tests/files/output/test-track-additional-models/: sprites.json
make-track/tests/files/output/test-track-alt/: sprites.json
make-track/tests/files/output/test-track-boundary-tie/: sprites.json
make-track/tests/files/output/test-track-lift/: sprites.json
make-track/tests/files/output/test-track-offsets/: sprites.json
make-track/tests/files/output/test-track-semi-flat-shaded/: sprites.json
make-track/tests/files/output/test-track-supports/: sprites.json
make-track/tests/files/output/test-track-tie/: sprites.json
make-track/tests/files/src/test-track/: test-track.blend  track.json  track.mtl
make-track/tests/files/src/test-track-additional-models/: track.json
make-track/tests/files/src/test-track-additional-models/models/: support_zero_g_roll.mtl  track.mtl
make-track/tests/files/src/test-track-alt/: .gitignore  test-track-alt.blend  track.json  track_alt.mtl
make-track/tests/files/src/test-track-boundary-tie/: .gitignore  test-track-boundary-tie.blend  tie.mtl  track.json  track.mtl  track_tie.mtl
make-track/tests/files/src/test-track-lift/: .gitignore  test-track-lift.blend  track.json  track.mtl
make-track/tests/files/src/test-track-offsets/: .gitignore  test-track-offsets.blend  track.json  track.mtl
make-track/tests/files/src/test-track-semi-flat-shaded/: .gitignore  test-track-semi-flat-shaded.blend  tie.mtl  track.json  track.mtl
make-track/tests/files/src/test-track-supports/: support_bank_half.mtl  support_base.mtl  test-track-supports.blend  track.json  track.mtl
make-track/tests/files/src/test-track-tie/: .gitignore  test-track-tie.blend  tie.mtl  track.json  track.mtl
make-vehicle/: Cargo.toml  rustfmt.toml
make-vehicle/src/: atlas.rs  lib.rs  main.rs  ride_desc.rs  ride_object.rs
make-vehicle/tests/: test.rs
make-vehicle/tests/files/mix.ride.rctgen2_make_vehicle_test/: object.json
make-vehicle/tests/files/testvehicle/: .gitignore  car.mtl  guests.mtl  restraints.mtl  ride.json  testvehicle.blend
openrct2/: Cargo.toml
openrct2/src/: colour.rs  lib.rs  objects.rs
openrct2/src/objects/: image.rs  ride.rs
rct/: Cargo.toml
rct/src/: csg.rs  lib.rs
rct/tests/: test_csg.rs
rctgen2/: Cargo.toml
rctgen2/src/: app.rs  main.rs  render.rs
renderer/: Cargo.toml
renderer/src/: framebuffer.rs  gx.rs  image.rs  lib.rs  model.rs  pack.rs  palette.rs  raytrace.rs  renderer.rs  texture.rs
sprite-build/: Cargo.toml
sprite-build/src/: lib.rs  main.rs
src/: main.rs  model.rs  palette.rs  raytrace.rs  renderer.rs
test-render/: Cargo.toml
test-render/src/: main.rs
