[workspace]
members = ["embree", "make-vehicle", "renderer", "test-render"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
elidable_lifetime_names = "warn"
get_unwrap = "warn"
if_not_else = "warn"
ptr_as_ptr = "warn"
redundant_type_annotations = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
