[workspace]
members = ["embree", "make-track", "make-vehicle", "openrct2", "rct", "renderer", "sprite-build", "test-render"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
elidable_lifetime_names = "warn"
get_unwrap = "warn"
if_not_else = "warn"
ptr_as_ptr = "warn"
redundant_type_annotations = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
explicit_into_iter_loop = "warn"
implicit_clone = "warn"
return_and_then = "warn"
needless_pass_by_value = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"
mem_forget = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
invalid_upcast_comparisons = "warn"
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"
allow_attributes = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
string_slice = "warn"
unchecked_time_subtraction = "warn"
