[workspace]
members = ["embree", "make-track", "make-vehicle", "openrct2", "rct", "renderer", "sprite-build"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
allow_attributes = "warn"
assertions_on_result_states = "warn"
borrow_as_ptr = "warn"
cast_lossless = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
elidable_lifetime_names = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
if_not_else = "warn"
implicit_clone = "warn"
infallible_try_from = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
needless_pass_by_value = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
return_and_then = "warn"
semicolon_if_nothing_returned = "warn"
string_slice = "warn"
todo = "warn"
unchecked_time_subtraction = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
