[package]
name = "make-track"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
glam = "0.30.9"
heapless = { version = "0.9.2", features = ["serde"] }
rayon = "1.11.0"
rct = { path = "../rct" }
renderer = { path = "../renderer" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.24.0"
