[package]
name = "make-track"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
glam = "0.32.1"
heapless = { version = "0.9.2", features = ["serde"] }
openrct2 = { path = "../openrct2" }
rayon = "1.11.0"
rct = { path = "../rct" }
renderer = { path = "../renderer" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
