[package]
name = "make-vehicle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
glam = "0.30.9"
renderer = { path = "../renderer" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[lints]
workspace = true
