[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
embree = { path = "../embree" }
enum-map = "2.7.3"
glam = "0.32.1"
obj = "0.10.2"
png = "0.18.1"
rand_pcg = "0.10.1"
rect_packer = "0.2.1"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
